@@ -142,9 +142,12 @@ mob_changetarget_byskill: no
 // If monster's class is changed will it fully recover HP and SP and Ailments? (Note 1)
 monster_class_change_full_recover: no
 
-// Will display a mob's hp/maxhp when the mouse cursor is over them. (Note 1)
-// Will not display guardian or emperium hp.
-show_mob_hp: no
+// Display some mob info next to their name? (add as needed)
+// (does not works on guardian or emperium)
+// 1: Display mob HP (Hp/MaxHp format)
+// 2: Display mob HP (Percent of full life format)
+// 4: Display mob's level
+show_mob_info: 0
 
 // Zeny from mobs
 zeny_from_mobs: no
